# meow-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.claude/workflows/: cleanup-issues-prs.js
.github/skills/i-impeccable/scripts/: live-browser.js
.github/workflows/: audit.yml  bench-daily.yml  release.yml  test.yml
crates/meow-anytls/: Cargo.toml
crates/meow-anytls/src/client/: client.rs  session_pool.rs
crates/meow-anytls/src/server/: handler.rs  udp_proxy.rs
crates/meow-anytls/src/session/: session.rs
crates/meow-api/: Cargo.toml
crates/meow-api/src/: routes.rs
crates/meow-api/tests/: api_logs_ws_test.rs  api_test.rs
crates/meow-app/: Cargo.toml
crates/meow-app/src/: health_check.rs  lib.rs  main.rs
crates/meow-app/tests/: systemd_config_test.rs
crates/meow-common/: Cargo.toml
crates/meow-common/src/: atomic.rs  lib.rs  process_lookup.rs  rule.rs
crates/meow-common/src/sniffer/: mod.rs
crates/meow-config/: Cargo.toml
crates/meow-config/src/: dns_parser.rs  ech_dns.rs  internal_http.rs  lib.rs  proxy_parser.rs  proxy_provider.rs  raw.rs  rule_provider.rs
crates/meow-config/tests/: config_test.rs  ech_dns_test.rs  vless_config_test.rs
crates/meow-config/tests/fixtures/: memleak_regression_direct.yaml
crates/meow-dns/: Cargo.toml
crates/meow-dns/src/: cache.rs  fakeip.rs  lib.rs  resolver.rs  server.rs
crates/meow-listener/: Cargo.toml
crates/meow-listener/src/: http_proxy.rs  lib.rs  mixed.rs  sniffer.rs  socks5.rs  socks5_udp.rs
crates/meow-listener/src/tproxy/: firewall.rs  mod.rs  orig_dest.rs
crates/meow-listener/src/tun/: device.rs  mod.rs  route.rs  udp.rs
crates/meow-listener/tests/: socks5_fakeip.rs  socks5_udp_associate.rs  socks5_udp_multi_reply.rs
crates/meow-listener/tests/common/: mod.rs
crates/meow-proxy/: Cargo.toml
crates/meow-proxy/src/: direct.rs  ech_tls_tunnel.rs  health.rs  http_adapter.rs  lib.rs  reject.rs  shadowsocks_adapter.rs  socks5_adapter.rs  trojan.rs  vless_adapter.rs
crates/meow-proxy/src/group/: relay.rs
crates/meow-proxy/src/snell/: adapter.rs  pool.rs  protocol.rs  udp.rs  v4.rs
crates/meow-proxy/src/vless/: conn.rs  mod.rs
crates/meow-proxy/src/vless/encryption/: aead.rs  client.rs  factory.rs  loopback_tests.rs  mod.rs  server.rs
crates/meow-proxy/src/vmess/: body.rs  conn.rs  header.rs  kdf.rs  mod.rs
crates/meow-proxy/tests/: shadowsocks_integration.rs  snell_integration.rs  snell_server_docker_integration.rs
crates/meow-rules/: Cargo.toml
crates/meow-rules/src/: asn_index.rs  geosite.rs  geosite_dat.rs  ip_asn.rs  lib.rs  logic.rs  mrs_parser.rs  parser.rs  rule_set.rs  sub_rule.rs
crates/meow-rules/tests/: geosite_lookup_alloc_test.rs  geosite_rss_stress.rs  geosite_rss_test.rs
crates/meow-transport/: Cargo.toml
crates/meow-transport/src/: grpc.rs  tls.rs  ws.rs
crates/meow-transport/tests/: boring_tls_test.rs
crates/meow-trie/: Cargo.toml
crates/meow-trie/benches/: bloomcheck_vs_trie.rs
crates/meow-trie/examples/: rss_compare.rs
crates/meow-trie/src/: trie.rs
crates/meow-trie/tests/: bloom_mismatch_test.rs
crates/meow-tunnel/: Cargo.toml
crates/meow-tunnel/benches/: rules_bench.rs  stats_bench.rs
crates/meow-tunnel/src/: match_engine.rs  rule_ir.rs  statistics.rs  tcp.rs  tunnel.rs  udp.rs
crates/meow-tunnel/tests/: alloc_count_test.rs  lazy_resolve_test.rs  reload_churn_leak_test.rs  statistics_test.rs
crates/meow-tunnel/tests/fixtures/: memleak_ech_pressure_config.yaml
crates/mihomo-api/src/: routes.rs
crates/mihomo-api/tests/: api_test.rs
crates/mihomo-app/src/: main.rs
crates/mihomo-bench/src/: bench_dns.rs  main.rs
crates/mihomo-common/src/: dns_mode.rs  process_lookup.rs
crates/mihomo-config/src/: dns_parser.rs  ech_dns.rs  lib.rs  raw.rs
crates/mihomo-config/tests/: config_test.rs
crates/mihomo-dns/: Cargo.toml
crates/mihomo-dns/src/: cache.rs  fakeip.rs  lib.rs  resolver.rs  server.rs
crates/mihomo-listener/src/tproxy/: firewall.rs  mod.rs
crates/mihomo-proxy/src/group/: relay.rs
crates/mihomo-proxy/src/vless/: header.rs  vision.rs
crates/mihomo-tunnel/: Cargo.toml
crates/mihomo-tunnel/src/: statistics.rs  tcp.rs  tunnel.rs  udp.rs
crates/mihomo-tunnel/tests/: fakeip_test.rs
docs/: gap-analysis.md  index.html  migration-from-go-mihomo.md  openwrt.md  tproxy-gateway.md  vision.md
docs/adr/: 0012-dns-via-proxy.md
docs/specs/: api-config-reload.md  bloom-filter-domain-trie.md  rule-provider-upgrade-test-plan.md  rule-provider-upgrade.md
openwrt/: README.md  build-ipk.sh
openwrt/luci-app-meow/htdocs/luci-static/resources/view/meow/: panel.js  settings.js
openwrt/luci-app-meow/root/usr/share/luci/menu.d/: luci-app-meow.json
openwrt/luci-app-meow/root/usr/share/rpcd/acl.d/: luci-app-meow.json
openwrt/meow/files/: config.yaml  meow.config  meow.init
scripts/: tproxy-gateway-linux.sh  tproxy-gateway-macos.sh  tproxy-local-linux.sh  tproxy-local-macos.sh
tests/: test_openwrt_qemu.sh  test_tproxy_qemu.sh
tests/openwrt-qemu/: driver.exp  guest-test.sh
