[workspace]
resolver = "2"
members = [
    "crates/meow-common",
    "crates/meow-trie",
    "crates/meow-dns",
    "crates/meow-rules",
    "crates/meow-transport",
    "crates/meow-proxy",
    "crates/meow-tunnel",
    "crates/meow-listener",
    "crates/meow-api",
    "crates/meow-config",
    "crates/meow-app",
    "crates/meow-bench",
]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "z"

# Profile for dhat heap profiling — keeps debug symbols, no strip, no LTO.
[profile.dhat]
inherits = "release"
lto = false
strip = false
debug = 1
opt-level = 1

[workspace.package]
version = "0.12.0"
edition = "2021"
rust-version = "1.89"
license = "GPL-3.0"

[workspace.lints.clippy]
uninlined_format_args = "warn"
redundant_closure = "warn"
redundant_clone = "deny"
manual_let_else = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
match_same_arms = "warn"
if_not_else = "warn"
unnecessary_wraps = "warn"
cloned_instead_of_copied = "warn"
# Allocation-focused lints (ADR-0010 addendum A §A1) — warn only; fixes land in M2.
clone_on_ref_ptr = "deny"
needless_collect = "deny"
format_push_string = "deny"
string_add = "deny"
useless_format = "deny"
large_enum_variant = "deny"
large_types_passed_by_value = "deny"
unnecessary_box_returns = "deny"
vec_init_then_push = "deny"
# Too noisy or contrary to project style — kept as allow:
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"

# Networking
# Pinned to the madeye fork's `feat/android-protect-hook` branch — adds a
# `SocketProtector` registry + `connect_tcp` / `bind_udp` helpers and
# routes the client-side outbound dials through them, mirroring the
# `meow_common::SocketProtector` API. Drop the pin once upstream merges
# https://github.com/jxo-me/anytls-rs/pull/2.
anytls-rs = { git = "https://github.com/madeye/anytls-rs.git", rev = "1d13befb2fdd40685f7e4f75b785e9e77ad5eefa" }
shadowsocks = { version = "1.21", default-features = false, features = ["aead-cipher", "aead-cipher-2022", "stream-cipher"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
quinn = { version = "0.11", default-features = false, features = ["log", "ring", "runtime-tokio", "rustls-ring"] }
webpki-roots = "0.26"

# DNS — only hickory-proto for wire-format encode/decode; the upstream
# transport (UDP/TCP/DoT/DoH) is implemented in-tree in `meow-dns::client`
# so the sockets are owned by us and host integrations can intercept them
# (Android `protect()`).
hickory-proto = "0.26"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# GeoIP
maxminddb = { version = "0.27", features = ["mmap"] }

# Concurrency
dashmap = "6"

# Caching
lru = "0.16"

# IP handling
ipnet = "2"
iprange = "0.6"

# Crypto
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
crc32fast = "1"
hex = "0.4"
subtle = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time (used directly by meow-api log timestamps; formatting feature enabled)
time = { version = "0.3", features = ["formatting"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1"

# Byte manipulation
bytes = "1"

# Compression (mrs geosite / rule-provider binary format)
zstd = "0.13"

# Randomness
rand = "0.9"

# Base64 encoding
base64 = "0.22"

# Socket utilities
socket2 = { version = "0.5", features = ["all"] }

# Futures
futures = "0.3"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }

# HTTP types
http = "1"

# Temporary files (tests)
tempfile = "3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Parking lot for sync primitives
parking_lot = "0.12"

# Wait-free read / atomic swap for hot-path rule-set + proxy-provider refreshes
arc-swap = "1"

# BoringSSL (pulled in by meow-transport's boring-tls feature)
boring      = { version = "5.0.2" }
tokio-boring = { version = "5.0.0" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Heap profiling (optional — used only with --features dhat-heap)
dhat = "0.3"

# Compact string types (M2 Metadata layout)
smol_str = { version = "0.3", features = ["serde"] }
smallvec = { version = "1", features = ["union", "serde"] }

# Property testing
proptest = "1"

# Workspace crates
# default-features = false on feature-gated crates so each consumer controls
# which optional protocols/listeners are compiled (M2.E feature-flag infra).
meow-common = { path = "crates/meow-common" }
meow-trie = { path = "crates/meow-trie" }
meow-dns = { path = "crates/meow-dns", default-features = false }
meow-rules = { path = "crates/meow-rules" }
meow-transport = { path = "crates/meow-transport" }
meow-proxy = { path = "crates/meow-proxy", default-features = false }
meow-tunnel = { path = "crates/meow-tunnel" }
meow-listener = { path = "crates/meow-listener", default-features = false }
meow-api = { path = "crates/meow-api" }
meow-config = { path = "crates/meow-config", default-features = false }
