# Vendored copy of the madeye fork of anytls-rs (github.com/madeye/anytls-rs),
# pinned at the commit that adds `Stream::close()` (madeye/anytls-rs#1,
# e6134889d3abbfaa2cb7439969dbda2ef6930611). Vendored in-tree to resolve #262:
# crates.io `anytls-rs@0.5.4` is jxo-me's UPSTREAM crate and lacks `close()`,
# so meow-proxy could not build the `anytls` feature against the registry.
#
# This crate uses Rust edition 2024, so package metadata is declared explicitly
# here rather than inherited from `[workspace.package]`.
#
# The package is renamed (`meow-anytls`) to avoid a crates.io name collision
# with the upstream `anytls-rs`, while the library name stays `anytls_rs` so
# dependents' `use anytls_rs::...` paths are unchanged.
[package]
name = "meow-anytls"
version = "0.17.0"
edition = "2024"
rust-version = "1.89"
description = "Vendored AnyTLS protocol implementation (madeye fork) for the meow-rs proxy kernel."
license = "MIT"
repository = "https://github.com/madeye/meow-rs"
homepage = "https://madeye.github.io/meow-rs/"
readme = "README.md"

[lib]
name = "anytls_rs"
path = "src/lib.rs"

[dependencies]
meow-common = { path = "../meow-common", version = "0.17.0" }
tokio = { version = "1.48", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "net",
    "sync",
    "time",
    "signal",
    "fs",
] }

# TLS — pinned to the `ring` crypto provider to match the rest of the workspace
# (meow-proxy/meow-transport use ring, not the default aws-lc-rs), so this crate
# does not independently request a second provider. meow installs ring as the
# process default at startup (meow-app/main.rs), and the adapter builds its TLS
# config with an explicit ring provider, so this crate's own `builder()`-based
# helpers (used only by the dropped fork bins) are not on meow's runtime path.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring"] }
rustls-pemfile = "2"

serde = { version = "1", features = ["derive"] }

bytes = "1.10.1"
tokio-util = { version = "0.7", features = ["codec"] }

sha2 = "0.10"
md5 = "0.8"

rand = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"
socket2 = "0.6"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }

thiserror = "2.0"
anyhow = "1.0"

notify = "8.2"
x509-parser = "0.18"
chrono = "0.4"

# libc is only used by the Android socket-protect helper (EINPROGRESS check on
# the non-blocking connect). Off-Android the helper compiles down to a direct
# `TcpStream::connect` / `UdpSocket::bind` and the dep is never pulled in.
[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
