[package]
name = "meow-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A high-performance, rule-based tunneling proxy kernel in Rust, compatible with mihomo (Clash.Meta)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["proxy", "clash", "mihomo", "vpn", "networking"]
categories = ["network-programming", "command-line-utilities"]

[features]
default = ["full", "boring-tls"]
boring-tls = ["meow-config/boring-tls"]
# Auto-download a third-party dashboard from `external-ui-url` (issue #223).
# Off by default — adds the `zip` dependency (ADR-0007 binary-size caps).
# Force-disabled at compile time on iOS/Android even if enabled.
external-ui-download = ["meow-config/external-ui-download"]
# Heap profiling via dhat crate — swaps global allocator; never enable in production.
dhat-heap = ["dhat"]

# Protocol features — forwarded to meow-proxy and meow-config
ss = ["meow-config/ss", "meow-proxy/ss"]
trojan = ["meow-config/trojan", "meow-proxy/trojan"]
vless = ["meow-config/vless", "meow-proxy/vless"]
vless-vision = ["vless", "meow-config/vless-vision", "meow-proxy/vless-vision"]
vless-encryption = ["vless", "meow-config/vless-encryption", "meow-proxy/vless-encryption"]
vmess = ["meow-config/vmess", "meow-proxy/vmess"]
snell = ["meow-config/snell", "meow-proxy/snell"]
hysteria2 = ["meow-config/hysteria2", "meow-proxy/hysteria2"]
ech-tls-tunnel = [
    "ss",
    "meow-config/ech-tls-tunnel",
    "meow-proxy/ech-tls-tunnel",
]

# DNS
dns-server = ["meow-dns/dns-server"]
dns-encrypted = ["meow-dns/encrypted"]

# Listener features — forwarded to meow-listener
listener-http = ["meow-listener/listener-http"]
listener-socks5 = ["meow-listener/listener-socks5"]
listener-tproxy = ["meow-listener/listener-tproxy"]
listener-mixed = ["meow-listener/listener-mixed"]
# TUN inbound (issue #326) — transparent proxy without a tproxy/REDIRECT
# firewall; the only transparent-proxy mode available on Windows.
listener-tun = ["meow-listener/listener-tun", "meow-api/listener-tun"]

# Convenience bundles
minimal = ["ss", "trojan", "dns-server", "listener-mixed"]
full = [
    "ss", "trojan", "vless", "vless-vision", "vless-encryption", "vmess", "snell", "hysteria2", "ech-tls-tunnel",
    "dns-server", "dns-encrypted",
    "listener-http", "listener-socks5", "listener-tproxy", "listener-mixed", "listener-tun",
]

[[bin]]
name = "meow"
path = "src/main.rs"

# cargo-machete false-positive: meow-proxy has no direct src imports but is
# required here to forward protocol features (`ss`, `trojan`, `vless`, etc.)
# to the proxy crate via the [features] table's `meow-proxy/<feat>` entries.
[package.metadata.cargo-machete]
ignored = ["meow-proxy"]

[dependencies]
meow-common = { workspace = true }
meow-config = { workspace = true, default-features = false }
meow-rules = { workspace = true }
meow-tunnel = { workspace = true }
meow-listener = { workspace = true, default-features = false }
meow-dns = { workspace = true, default-features = false }
meow-api = { workspace = true }
meow-proxy = { workspace = true, default-features = false }
base64 = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rustls = { workspace = true }
libc = "0.2"
dhat = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
tracing-appender = "0.2.5"
windows-service = "0.8.1"
windows-sys = { version = "0.61", features = ["Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
serde_yaml = { workspace = true }
meow-config = { workspace = true }
meow-rules = { workspace = true }
maxminddb = { workspace = true }
libc = "0.2"

[lints]
workspace = true
