[package]
name = "meow-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core traits and types (ProxyAdapter, Rule, Metadata) for the meow-rs proxy kernel."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
httparse = { version = "1", default-features = false }
ipnet = { workspace = true }
subtle = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
socket2 = { workspace = true }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
libc = "0.2"

# Unix-only dev deps used by socket_protect's `#[cfg(all(test, unix))]` tests:
# they exercise the protector hook against real loopback sockets on the CI
# host instead of waiting for an Android emulator.
[target.'cfg(unix)'.dev-dependencies]
socket2 = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "net"] }

[lints]
workspace = true
