[package]
name = "meow-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "YAML configuration parsing for the meow-rs proxy kernel."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["ss", "trojan", "vless", "vless-vision", "vless-encryption", "ech-tls-tunnel", "vmess", "snell", "hysteria2"]
ss = ["meow-proxy/ss"]
trojan = ["meow-proxy/trojan"]
vless = ["meow-proxy/vless"]
vless-vision = ["vless", "meow-proxy/vless-vision"]
vless-encryption = ["vless", "meow-proxy/vless-encryption"]
vmess = ["meow-proxy/vmess"]
anytls = ["meow-proxy/anytls"]
hysteria2 = ["meow-proxy/hysteria2"]
snell = ["meow-proxy/snell"]
boring-tls = ["meow-transport/boring-tls"]
ech = ["meow-transport/ech"]
ech-tls-tunnel = ["ss", "meow-proxy/ech-tls-tunnel"]
# Auto-download + unzip a third-party dashboard from `external-ui-url` (issue
# #223). Off by default: pulls in the `zip` crate, which grows the binary
# against the ADR-0007 size caps. Even when enabled, the code path is
# force-disabled on iOS/Android targets (see `src/lib.rs`).
external-ui-download = ["dep:zip"]

[dependencies]
meow-common = { workspace = true }
meow-trie = { workspace = true }
meow-dns = { workspace = true, features = ["encrypted"] }
meow-rules = { workspace = true }
meow-proxy = { workspace = true, default-features = false }
meow-transport = { workspace = true, features = ["grpc", "h2", "httpupgrade"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
maxminddb = { workspace = true }
ipnet = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
hickory-proto = { workspace = true }
smol_str = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
url = "2"
httparse = "1"
# Optional: only compiled when the `external-ui-download` feature is enabled.
# `deflate` is the only codec GitHub release zips use; skip the heavier ones.
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
tracing-subscriber = { workspace = true }

[[test]]
name = "vless_config_test"
path = "tests/vless_config_test.rs"

[lints]
workspace = true
