[package]
name = "meow-listener"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Inbound protocol listeners (Mixed/HTTP/SOCKS5/TProxy) for the meow-rs proxy kernel."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["listener-http", "listener-socks5", "listener-mixed", "listener-tproxy"]
listener-http = []
listener-socks5 = []
listener-tproxy = []
listener-mixed = ["listener-http", "listener-socks5"]

[dependencies]
meow-common = { workspace = true }
meow-trie = { workspace = true }
meow-tunnel = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
smallvec = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
meow-dns = { workspace = true }
meow-trie = { workspace = true }
ipnet = { workspace = true }

[lints]
workspace = true
