[package]
name = "meow-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Proxy protocol implementations (Shadowsocks, Trojan, VLESS, ...) and groups for the meow-rs proxy kernel."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["ss", "trojan", "vless", "vless-vision", "vless-encryption", "ech-tls-tunnel", "vmess", "snell", "hysteria2"]
ss = ["dep:shadowsocks"]
trojan = []
vless = []
vmess = ["dep:md-5", "dep:hmac", "dep:aes", "dep:aes-gcm", "dep:chacha20poly1305", "dep:crc32fast"]
vless-vision = ["vless"]
# VLESS post-quantum Encryption layer (`encryption: mlkem768x25519plus...`),
# the ML-KEM-768 + X25519 hybrid handshake used by Xray-core / mihomo. Adds the
# BLAKE3 / ML-KEM / X25519 / AES-CTR crypto stack, so it is opt-in (bundled into
# the app `full` profile, kept out of `minimal` — ADR-0007 binary-size caps).
vless-encryption = [
    "vless",
    "dep:blake3",
    "dep:ml-kem",
    "dep:x25519-dalek",
    "dep:ctr",
    "dep:aes",
    "dep:aes-gcm",
    "dep:chacha20poly1305",
]
# Snell v3/v4/v5 outbound — argon2id KDF + AES-128-GCM AEAD frames,
# optional http/tls obfs (reused from the SS simple-obfs module),
# UDP-over-TCP, and an opt-in v4/v5 reuse pool (CommandConnectV2).
snell = ["dep:argon2", "dep:aes-gcm"]
# Opt-in anytls outbound (uses the vendored `meow-anytls` crate, lib name
# `anytls_rs`). Adds ~one extra TLS provider to the binary because the vendored
# crate keeps the fork's default rustls features — accept the bloat in exchange
# for not re-implementing the wire protocol. Off by default.
anytls = ["dep:meow-anytls"]
# Hysteria2 outbound implemented in-tree on top of Quinn.
hysteria2 = ["dep:quinn", "dep:h3", "dep:h3-quinn", "dep:blake2"]
# Native client for the `ech-tls-tunnel` SIP003 plugin
# (https://github.com/shadowsocks/ech-tls-tunnel). Requires ECH on rustls,
# which pulls aws-lc-rs in via meow-transport.
ech-tls-tunnel = ["ss", "meow-transport/ech"]

[dependencies]
meow-common = { workspace = true }
meow-dns = { workspace = true }
meow-transport = { workspace = true }
tokio = { workspace = true }
meow-anytls = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
shadowsocks = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
libc = "0.2"
smol_str = { workspace = true }
smallvec = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
md-5 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
ml-kem = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
ctr = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
meow-trie = { workspace = true }
rcgen = "0.13"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
